# punch-card

./: .gitignore  README.md  TODO  makefile  pc.sh  punch-card.sh  pyproject.toml  test_creds.toml
notebooks/: log_read.ipynb
src/: app.py  cal.py  common.py  db.py  db_to_cal.py  main.py  rebuild_state_from_log.py  style.css  sync.py
tests/: test_db.py  test_dev.py  test_sync_dbs.py
