[tool.poetry]
name = "punch-card"
version = "0.1.0"
description = ""
authors = ["algrt-hm <46109874+algrt-hm@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.11"
textual = "^0.27.0"
SQLAlchemy = "^2.0.15"
pydantic = "^1.10.9"
icalendar = "^5.0.7"
pandas = "^2.0.2"
tabulate = "^0.9.0"
psycopg2-binary = "^2.9.6"
icecream = "^2.1.3"

[tool.poetry.dev-dependencies]
textual-dev = "^0.0.2"
black = "^23.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
